--- a/public/musa/reusable-blocks/header/__main.css
+++ b/public/musa/reusable-blocks/header/__main.css
@@ -96,7 +96,7 @@
   border-radius: 100%;
   image-rendering: crisp-edges;
   border: 2px solid #fff;
-  background-image: url("../../../assets/img/avatar.jpg");
+  background-image: url("../../assets/img/avatar.jpg");
   background-position: center;
   background-size: 100px;
   background-repeat: no-repeat;
