--- a/public/musa/districts/assets/css/style.css
+++ b/public/musa/districts/assets/css/style.css
@@ -296,6 +296,12 @@ body {
   }
 }
 
+@media screen and (max-height: 700px) {
+  .menu__footer {
+    max-height: 100px;
+  }
+}
+
 /*@media screen and (max-width: 1350px) {*/
 /*  .reports-list__body__element {*/
 /*    padding-left: 150px;*/
