--- a/public/musa/one-district/blocks/content/body/__reports.css
+++ b/public/musa/one-district/blocks/content/body/__reports.css
@@ -1,6 +1,6 @@
 .reports {
   width: 100%;
-  height: 480px;
+  height: 66vh;
   border-radius: 4px;
   justify-content: space-between;
   font-size: 14px;
