--- a/public/musa/reports/blocks/content/body/__reports.css
+++ b/public/musa/reports/blocks/content/body/__reports.css
@@ -1,6 +1,6 @@
 .reports {
   width: 100%;
-  height: 550px;
+  height: 70vh;
   border-radius: 4px;
   justify-content: space-between;
   font-size: 14px;
