--- a/public/musa/reusable-blocks/menu/menu.css
+++ b/public/musa/reusable-blocks/menu/menu.css
@@ -72,7 +72,89 @@
 }
 
 @media screen and (min-width: 1920px) {
+  .menu {
+    height: 100vh;
+    width: 500px;
 
+  }
+
+
+  .menu__body div {
+    padding-left: 40px;
+    font-size: 22px;
+  }
+
+  .menu__body img {
+    width: 20px;
+    height: 20px;
+  }
+
+  .active {
+    width: 260px;
+  }
+
+  .menu__header {
+    padding: 40px 24px;
+    height: 118px;
+    justify-content: flex-start;
+  }
+
+  .menu__header__text {
+    font-size: 20px;
+    width: 242px;
+    line-height: 29.4px;
+  }
+
+  .menu__header img{
+    width: 70px;
+    height: 70px;
+  }
+
+  .menu__folded .menu__header {
+    padding: 24px 30px;
+  }
+
+  .menu__folded .menu__header img {
+    width: 70px;
+    height: 70px;
+  }
+
+  .menu__footer {
+    padding-left: 40px;
+  }
+
+  .menu__footer__text {
+    font-size: 20px;
+  }
+
+  .menu__folded {
+    width: 146px;
+  }
+
+  .menu__folded .menu__body {
+    padding-left: 46px;
+  }
+
+  .menu__folded .active {
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+  }
+
+  .menu__folded .menu__body__list img {
+    margin-left: 10px;
+  }
+
+  .menu__folded .menu__footer img {
+    margin-left: 16px;
+    width: 20px;
+    height: 20px;
+  }
+
+  .menu__folded .menu__footer__toggle {
+    padding-top: 50%;
+  }
 }
 
 @media screen and (max-width: 1600px) {
