--- a/public/musa/one-district/blocks/content/body/__reports.css
+++ b/public/musa/one-district/blocks/content/body/__reports.css
@@ -1,6 +1,6 @@
 .reports {
   width: 100%;
-  height: 66vh;
+  max-height: 66vh;
   border-radius: 4px;
   justify-content: space-between;
   font-size: 14px;
@@ -8,7 +8,7 @@
 }
 
 .reports__decrease-height {
-  height: 410px;
+  max-height: 56vh;
 }
 
 .reports::-webkit-scrollbar {
