--- a/public/musa/report-form/assets/css/style.css
+++ b/public/musa/report-form/assets/css/style.css
@@ -110,6 +110,10 @@ body {
   display: none;
 }
 
+.reports-form__footer__first-block__element:first-child {
+  min-width: 415px;
+}
+
 @media screen and (max-width: 2732px) {
 
 }
@@ -126,10 +130,7 @@ body {
 
   .menu {
     height: 100vh;
-  }
-
-  .menu {
-    width: 500px;
+    width: 460px;
   }
 
   .menu__body div {
@@ -209,6 +210,11 @@ body {
     padding-top: 50%;
   }
 
+  .menu__body__list a {
+    margin-bottom: 28px;
+    line-height: 29.96px;
+  }
+
   .header__input {
     height: 119px;
   }
@@ -242,6 +248,76 @@ body {
     height: 60px;
   }
 
+  .body__back-button {
+    height: 80px;
+    font-size: 18px;
+  }
+
+  .reports-title {
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
+
+  .reports-title__my-reports__text {
+    font-size: 32px;
+  }
+
+  .sort {
+    height: 50px;
+  }
+
+  .reports-form {
+    height: 80px;
+  }
+
+  .reports-form__body {
+    font-size: 16px;
+  }
+
+  .reports-form__footer__assistant {
+    font-size: 18px;
+  }
+
+  .first-block__element__worker {
+    height: 60px;
+    width: 338px;
+  }
+
+  .blue-button {
+    height: 50px;
+    width: 165px;
+    font-size: 16px;
+    padding: 14px 6.5px;
+  }
+
+  .reports-form__footer__first-block__element {
+    font-size: 18px;
+  }
+
+  .add-button {
+    height: 50px;
+    width: 200px;
+    font-size: 16px;
+  }
+
+  .reports-form__footer__submit {
+    height: 80px;
+    font-size: 18px;
+  }
+
+  .add-report-btn {
+    width: 190px;
+    height: 50px;
+  }
+
+  .add-report-btn img {
+    margin-right: 2px;
+  }
+
+  .reports-form__footer__save__buttons {
+    font-size: 14px;
+  }
+
 }
 
 @media screen and (max-width: 1600px) {
@@ -256,7 +332,150 @@ body {
 
 }
 
-@media screen and (max-width: 1024px){
+@media screen and (max-width: 1024px) {
+
+  .menu {
+    width: 256px;
+  }
+
+  .menu__body div {
+    padding-left: 28px;
+    font-size: 14px;
+  }
+
+  .menu__body img {
+    width: 16px;
+    height: 16px;
+  }
+
+  .active {
+    width: 180px;
+  }
+
+  .menu__header {
+    padding: 9px 12px;
+    height: 70px;
+    justify-content: flex-start;
+  }
+
+  .menu__header__text {
+    font-size: 12px;
+    width: 242px;
+    line-height: 17.64px;
+  }
+
+  .menu__header img{
+    width: 50px;
+    height: 50px;
+  }
+
+  .menu__folded .menu__header {
+    padding: 24px 28px;
+  }
+
+  .menu__folded .menu__header img {
+    width: 50px;
+    height: 50px;
+  }
+
+  .menu__footer {
+    padding-left: 30px;
+  }
+
+  .menu__footer__text {
+    font-size: 12px;
+  }
+
+  .menu__folded {
+    width: 120px;
+  }
+
+  .menu__folded .menu__body {
+    padding-left: 36px;
+  }
+
+  .menu__folded .active {
+    width: 37px;
+    height: 35px;
+    display: flex;
+    align-items: center;
+  }
+
+  .menu__folded .menu__body__list img {
+    margin-left: 10px;
+  }
+
+  .menu__folded .menu__footer img {
+    margin-left: 16px;
+    width: 16px;
+    height: 16px;
+  }
+
+  .header__input {
+    height: 60px;
+  }
+
+  .header__main {
+    padding: 0 0 0 36px;
+  }
+
+  .user__notification img {
+    width: 18px;
+    height: 18px;
+  }
+
+  .user__info {
+    margin-right: 50px;
+  }
+
+  .user__info__name {
+    font-size: 14px;
+    width: 140px;
+    line-height: 19.07px;
+  }
+
+  .user__info__post {
+    font-size: 10px;
+    line-height: 13.62px;
+  }
+
+  .user__info__avatar {
+    width: 40px;
+    height: 40px;
+  }
+
+  .user__info__arrow img {
+    width: 20px;
+    height: 20px;
+  }
+
+  .reports-form__footer__first-block {
+    font-size: 14px;
+  }
+
+  .sort {
+    width: 191px;
+    height: 30px;
+    font-size: 12px;
+  }
+
+  .blue-button {
+    font-size: 12px;
+  }
+
+  .sort__block {
+    width: 191px;
+  }
+
+  .add-button {
+    height: 30px;
+    font-size: 12px;
+    padding: 7px 10px;
+  }
+
+  .reports-form__footer__first-block__element {
+    height: 60px;
+  }
 
 }
 
