--- a/public/musa/reports/blocks/content/body/__reports.css
+++ b/public/musa/reports/blocks/content/body/__reports.css
@@ -1,6 +1,6 @@
 .reports {
   width: 100%;
-  height: 70vh;
+  max-height: 70vh;
   border-radius: 4px;
   justify-content: space-between;
   font-size: 14px;
@@ -8,7 +8,7 @@
 }
 
 .reports__decrease-height {
-  height: 480px;
+  height: 60vh;
 }
 
 .reports::-webkit-scrollbar {
