--- a/public/musa/reusable-blocks/header/__main.css
+++ b/public/musa/reusable-blocks/header/__main.css
@@ -1,3 +1,4 @@
+
 .header__main {
   width: 100%;
   padding: 15px 0px 15px 36px;
@@ -17,7 +18,8 @@
 .header__input input{
   width: 25%;
   min-width: 25%;
-  height: 90%;
+  height: 100%;
+  max-height: 50px;
   margin-left: 12px;
   background: none;
   border: none;
