--- a/public/maga/blocks/styles.css
+++ b/public/maga/blocks/styles.css
@@ -31,8 +31,89 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-archive_alt:before {
+    content: "\e90e";
+}
+.icon-archive:before {
+    content: "\e90f";
+}
+.icon-arrow_drop_down:before {
+    content: "\e910";
+}
+.icon-calendar:before {
+    content: "\e911";
+}
+.icon-darhboard_alt:before {
+    content: "\e912";
+}
+.icon-expand_left_right:before {
+    content: "\e913";
+}
+.icon-folder_alt:before {
+    content: "\e914";
+}
+.icon-import_light:before {
+    content: "\e915";
+}
+.icon-menu:before {
+    content: "\e916";
+}
+.icon-notifications:before {
+    content: "\e917";
+}
+.icon-order:before {
+    content: "\e918";
+}
+.icon-plus-circle:before {
+    content: "\e919";
+}
+.icon-rename:before {
+    content: "\e91a";
+}
+.icon-save_light:before {
+    content: "\e91b";
+}
+.icon-setting:before {
+    content: "\e91c";
+}
+.icon-sort:before {
+    content: "\e91d";
+}
+.icon-trophy:before {
+    content: "\e91e";
+}
+.icon-user:before {
+    content: "\e91f";
+}
+.icon-desk:before {
+    content: "\e909";
+}
+.icon-document-add:before {
+    content: "\e905";
+}
+.icon-document-check:before {
+    content: "\e906";
+}
+.icon-document-update:before {
+    content: "\e907";
+}
+.icon-star:before {
+    content: "\e908";
+}
+.icon-chevron-down:before {
+    content: "\e90a";
+}
+.icon-sortable-down:before {
+    content: "\e90b";
+}
+.icon-sortable-up:before {
+    content: "\e90c";
+}
+.icon-sortable:before {
+    content: "\e90d";
+}
 .icon-map:before {
-  content: "\e904";
+    content: "\e904";
 }
 .icon-search:before {
     content: "\e903";
