--- a/public/maga/blocks/actions/actions.css
+++ b/public/maga/blocks/actions/actions.css
@@ -18,10 +18,11 @@
 }
 
 .actions__title h3 {
-    padding: 16px 20px;
+    padding: 14px 20px 16px;
     font-weight: 600;
     font-size: 22px;
     margin: unset;
+    line-height: 34px;
 }
 
 .actions__info {
@@ -34,7 +35,7 @@
     box-sizing: border-box;
 }
 
-.actions__reports-info-item {
+.actions__info-item {
     border: 1px solid #3A424B;
     margin-bottom: 6px;
     border-radius: 8px;
@@ -43,7 +44,7 @@
     color: #fff;
 }
 
-.actions__reports-info-item:last-child {
+.actions__info-item:last-child {
     margin-bottom: 0;
 }
 .actions__reports-rating {
@@ -52,13 +53,14 @@
     padding-right: 2px;
 }
 
-.actions__reports-info-item-title {
+.actions__info-item-title {
     font-size: 14px;
     height: 30px;
 }
 
 .actions__reports-text {
     margin-top: 6px;
+    line-height: 20px;
 }
 
 .actions__reports-date {
@@ -70,4 +72,3 @@
 .actions__reports-date .icon-document {
     margin-right: 2px;
 }
-
