--- a/public/maga/blocks/comparison/comparison.css
+++ b/public/maga/blocks/comparison/comparison.css
@@ -1,108 +1,163 @@
 .comparison {
+    flex-direction: column;
     margin-top: 24px;
     display: flex;
-    flex-direction: column;
 }
 
 .comparison__title {
-    color: white;
     background: #17212b;
     border-radius: 12px;
+    color: white;
 }
 
 .comparison__title h3 {
-    padding: 16px 20px;
+    padding: 14px 20px 16px;
+    line-height: 34px;
+    font-weight: 600;
+    font-size: 22px;
+    margin: unset;
+}
+
+.comparison__subtitle {
+    background: #17212b;
+    border-radius: 12px;
+    margin-top: 6px;
+    color: white;
+}
+
+.comparison__subtitle h3 {
+    padding: 14px 20px 16px;
+    line-height: 34px;
     font-weight: 600;
     font-size: 22px;
     margin: unset;
 }
 
 .comparison__info {
-    background: #17212b;
     border-radius: 12px;
+    font-size: 12px;
     margin-top: 6px;
-    display: flex;
     color: #fff;
-    padding: 20px;
 }
 
-.comparison__info_number {
-    font-size: 24px;
-    font-weight: 600;
-    margin-right: 16px;
+.comparison__info .sub-collapsible .collapsible-button, .comparison__info .sub-collapsible .collapsible-content {
+    padding-left: 40px;
 }
 
-.comparison__info_description {
+.comparison__info .sub-collapsible .collapsible-button::before {
+    color: rgba(255,255,255,0.2);
+    position: absolute;
     font-size: 14px;
-    line-height: 24px;
+    content: "↳";
+    left: 18px;
+    top: 17px;
 }
 
-.comparison__indicators {
-    justify-content: space-between;
-    padding: 24px 24px 0 24px;
-    border-radius: 12px;
+.comparison__info .collapsible-button {
+    border-bottom: 1px solid #2e3740;
     background: #17212b;
-    margin-top: 6px;
-    flex-wrap: wrap;
-    display: flex;
-}
-
-.comparison__indicator {
-    justify-content: space-between;
-    width: calc(100% / 10 - 8px);
-    padding: 14px 14px 14px 0;
-    box-sizing: border-box;
-    margin-bottom: 24px;
-    background: #1b2734;
-    border-radius: 8px;
-    cursor: pointer;
-    display: flex;
-    height: 70px;
-    color: white;
-}
-
-.comparison__indicator:hover, .comparison__indicator:hover .progress-circle span {
-    background: #1f2c3a;
-}
-
-.progress-circle {
-    box-sizing: border-box;
-    border-radius: 50%;
-    padding: 9px;
-    height: 40px;
-    width: 40px;
-}
-
-.progress-circle .circle {
-    box-sizing: border-box;
-    border-radius: 100%;
-    background: #26323e;
-    display: block;
-    padding: 5px;
-    height: 100%;
-    width: 100%;
-}
-
-.progress-circle span {
-    border-radius: 100%;
-    background: #1b2734;
-    display: table;
-    height: 100%;
-    width: 100%;
-}
-
-.comparison__indicator-number {
-    border-left: 3px solid #60b251;
-    line-height: 34px;
-    padding-left: 7px;
-    font-size: 14px;
-    font-weight: 600;
-    margin: 4px 0;
-}
-
-.comparison__indicator-number .icon-info {
-    color: rgba(255,255,255,0.25);
     position: relative;
-    margin-left: 1px;
-    top: 1px;
+    line-height: 20px;
+    transition: 0.3s;
+    padding: 18px;
+    color: #fff;
+}
+
+.comparison__info .collapsible:last-child .collapsible-button {
+    border: unset;
+}
+
+.comparison__info .collapsible:first-child button {
+    border-radius: 12px 12px 0 0;
+}
+
+.comparison__info .collapsible:last-child button {
+    border-radius: 0 0 12px 12px;
+}
+
+.comparison__info .collapsible.active:first-child .collapsible-button {
+    border-radius: 12px;
+
+}
+.comparison__info .collapsible.active:not(:first-child) .collapsible-button {
+    border-radius: 0 0 12px 12px;
+}
+
+.comparison__info .collapsible.active.previous-open:not(:first-child) .collapsible-button {
+    border-radius: 12px;
+}
+
+.comparison__info .collapsible.previous-open .collapsible-button {
+    border-radius: 12px 12px 0 0;
+}
+
+.comparison__info .collapsible.previous-open:last-child .collapsible-button {
+    border-radius: 12px;
+}
+
+.districts-score {
+    margin: 6px 0;
+}
+
+.districts-score-table {
+    color: white;
+    width: 100%;
+    margin-top: 6px;
+    border-spacing: unset;
+    font-size: 16px;
+}
+
+.districts-score-table tbody td {
+    background: #17212b;
+    line-height: 40px;
+    height: 50px;
+}
+
+.districts-score-table tbody tr:first-child td:first-child {
+    border-radius: 12px 0 0 0;
+}
+
+.districts-score-table tbody tr:first-child td:last-child {
+    border-radius: 0 12px 0 0;
+}
+
+.districts-score-table tbody tr:last-child td:last-child {
+    border-radius: 0 0 12px 0;
+}
+
+.districts-score-table tbody tr:last-child td:first-child {
+    border-radius: 0 0 0 12px;
+}
+
+.districts-score-table thead {
+    height: 64px;
+    font-size: 14px;
+}
+
+.districts-score-table tbody tr:not(:last-child) td {
+    border-bottom: 1px solid #2e3740;
+}
+
+.districts-score-table thead th {
+    background: #17212b;
+}
+
+.districts-score-table thead th:first-child {
+    border-radius: 12px 0 0 12px;
+}
+
+.districts-score-table thead th:last-child {
+    border-radius: 0 12px 12px 0;
+}
+
+.districts-score-table tbody:before {
+    content:"@";
+    display:block;
+    line-height:0;
+    text-indent:-99999px;
+}
+
+.districts-score-table tbody tr td.separator {
+    width: 16px;
+    border: unset;
 }
