--- a/public/maga/blocks/statistics/statistics.css
+++ b/public/maga/blocks/statistics/statistics.css
@@ -20,10 +20,11 @@
 }
 
 .statistics__title h3 {
-    padding: 16px 20px;
+    padding: 14px 20px 16px;
     font-weight: 600;
     font-size: 22px;
     margin: unset;
+    line-height: 34px;
 }
 
 .statistics__info {
