--- a/public/musa/report-form/assets/css/style.css
+++ b/public/musa/report-form/assets/css/style.css
@@ -130,7 +130,7 @@ body {
 
   .menu {
     height: 100vh;
-    width: 460px;
+    width: 420px;
   }
 
   .menu__body div {
@@ -148,7 +148,7 @@ body {
   }
 
   .menu__header {
-    padding: 40px 24px;
+    padding: 40px 10px;
     height: 118px;
     justify-content: flex-start;
   }
@@ -164,13 +164,28 @@ body {
     height: 70px;
   }
 
+  .menu__body__list a {
+    height: 40px;
+    width: 280px;
+  }
+
   .menu__folded .menu__header {
     padding: 24px 30px;
+  }
+
+  .menu__folded .active img {
+    padding: 0;
+    margin-left: 10px;
   }
 
   .menu__folded .menu__header img {
     width: 70px;
     height: 70px;
+  }
+
+  .menu__folded .menu__body__list a {
+    width: 40px;
+    height: 40px;
   }
 
   .menu__footer {
@@ -192,12 +207,7 @@ body {
   .menu__folded .active {
     width: 40px;
     height: 40px;
-    display: flex;
     align-items: center;
-  }
-
-  .menu__folded .menu__body__list img {
-    margin-left: 10px;
   }
 
   .menu__folded .menu__footer img {
@@ -211,8 +221,17 @@ body {
   }
 
   .menu__body__list a {
-    margin-bottom: 28px;
+    margin-bottom: 18px;
     line-height: 29.96px;
+  }
+
+  .menu__folded .menu__body__list img {
+    width: 20px;
+    height: 20px;
+  }
+
+  .active {
+    height: 40px !important;
   }
 
   .header__input {
@@ -344,12 +363,17 @@ body {
   }
 
   .menu__body img {
-    width: 16px;
+    width: 24px;
     height: 16px;
   }
 
   .active {
     width: 180px;
+  }
+
+  .menu__folded .active {
+    margin-right: 0;
+    margin-left: 10px;
   }
 
   .menu__header {
@@ -391,7 +415,16 @@ body {
   }
 
   .menu__folded .menu__body {
-    padding-left: 36px;
+    margin-left: 0;
+    padding-left: 0;
+  }
+
+  .menu__folded .menu__body__list img {
+    margin-right: 6px;
+  }
+
+  .menu__folded .menu__body__list {
+    padding-left: 25px !important;
   }
 
   .menu__folded .active {
@@ -401,12 +434,20 @@ body {
     align-items: center;
   }
 
-  .menu__folded .menu__body__list img {
+  .menu__folded .active img {
+    width: 24px;
+  }
+
+  .menu__folded .menu__body__list a {
     margin-left: 10px;
   }
 
+  .menu__footer__toggle a {
+    padding-top: 0;
+  }
+
   .menu__folded .menu__footer img {
-    margin-left: 16px;
+    margin-left: 15px;
     width: 16px;
     height: 16px;
   }
@@ -473,14 +514,75 @@ body {
     padding: 7px 10px;
   }
 
+  .body__back-button {
+    font-size: 14px;
+  }
+
+  .add-report-btn {
+    width: 129px;
+    height: 30px;
+    font-size: 12px;
+  }
+
+  .add-report-btn img {
+    margin: 0;
+  }
+
+  .reports-title__my-reports__text {
+    font-size: 18px;
+  }
+
   .reports-form__footer__first-block__element {
     height: 60px;
   }
 
+  .menu__folded .menu__body__list img:not(:first-child) {
+    margin-left: 0;
+  }
+
+}
+
+@media screen and (max-height: 800px) {
+  .menu__footer {
+    max-height: 200px;
+  }
+
+  .menu {
+    min-height: 100vh;
+  }
 }
 
 @media screen and (max-height: 700px) {
   .menu__footer {
-    max-height: 100px;
+    max-height: 200px;
+  }
+
+  .menu__footer__toggle a {
+    padding-top: 0;
+    bottom: 25px;
+  }
+
+}
+
+@media screen and (max-height: 600px) {
+  .menu__footer {
+    max-height: 200px;
+  }
+
+  .menu__footer__toggle a {
+    padding-top: 0;
+    bottom: 25px;
+  }
+
+}
+
+@media screen and (max-height: 500px) {
+  .menu__footer {
+    max-height: 200px;
+  }
+
+  .menu__footer__toggle a {
+    padding-top: 0;
+    bottom: 25px;
   }
 }
